    the plugin and man pages.

* v1.3 (November 26th, 2017)
  - New checks:
    thread-with-slots
    connect-3arg-lambda
    qproperty-without-notify
    virtual-signal
    overridden-signal
    qhash-namespace
    const-signal-or-slot
    lambda-unique-connection
  - missing-qobject-macro is now a level2 check, instead of level1. Because,
    people can omit Q_OBJECT intentionally.
  - Added -only-qt option, which will make clazy bailout early on non-Qt files.
    For this purpose, the definition of a Qt file is whenever -DQT_CORE_LIB is passed, which is usually the case in most build systems.
  - Added -qt-developer option, when building Qt with clazy it will honour specific guidelines for Qt, which are not many right now but the
    list will grow.

* v1.4 (, 2018)
  - New Checks:
    connect-by-name
    skipped-base-class
    qstring-varargs
    fully-qualified-moc-types
    qt-keywords, with fixit included
    qhash-with-char-pointer-key
    wrong-qevent-cast
    static-pmf
    raw-environment-function
    empty-qstringliteral
  - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
  - performance optimizations
  - Added -header-filter=<regex> option to clazy-standalone. Only headers matching the regexp will have warnings,
    besides the .cpp file from the translation unit, which is never filtered out.
  - Added CLAZY_HEADER_FILTER env variable which adds above functionality to both clazy and clazy-standalone
  - unused-non-trivial-variable got unused-non-trivial-variable-no-whitelist option
  - unused-non-trivial-variable got user-blacklist and user-whitelist support
  - container-inside-loop is now a manual check instead of level2
  - HiddenLevel was renamed to ManualLevel
  - connect-3arg-lambda now warns when passing a lambda to QTimer::singleShot() or QMenu::addAction() without a context object
  - old-style-connect warns for QMenu::addAction() and QMessageBox::open() too now