@@ -73,12 +73,14 @@ class ClazyStandaloneASTAction : public clang::ASTFrontendAction
 public:
     explicit ClazyStandaloneASTAction(const std::string &checkList,
                                       const std::string &headerFilter,
+                                      const std::string &ignoreDirs,
                                       ClazyContext::ClazyOptions = ClazyContext::ClazyOption_None);
 protected:
     std::unique_ptr<clang::ASTConsumer> CreateASTConsumer(clang::CompilerInstance &ci, llvm::StringRef) override;
 private:
     const std::string m_checkList;
     const std::string m_headerFilter;
+    const std::string m_ignoreDirs;
     const ClazyContext::ClazyOptions m_options;
 };
 
